# c-plus-training

./: .gitignore  CMakeLists.txt  Makefile  README.md
benchmark/: readme.md
benchmark/class/: CMakeLists.txt  class_init_benchmark.cc
cmake/: readme.md
cmake/01-basic/1-hello-cmake/: CmakeLists.txt  readme.md
cmake/01-basic/3-static-libaray/a/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/01-basic/3-static-libaray/src/: hello.cc
cmake/02-sub-projects/1-basic/: CmakeLists.txt
cmake/02-sub-projects/1-basic/sub1/: CmakeLists.txt
cmake/02-sub-projects/1-basic/sub2/: CmakeLists.txt
cmake/03-code-generation/configure-files/: CmakeLists.txt  path.h.in
cmake/03-code-generation/protobuf/: CmakeLists.txt
cmake/1-basic/1-hello-cmake/: readme.md
cmake/1-basic/2-hello-headers/: CmakeLists.txt
cmake/1-basic/3-static-libaray/: CMakeLists.txt
cmake/1-basic/4-shared-libaray/: CMakeLists.txt
cmake/1-basic/4-shared-libaray/src/: hello.cc
cmake/2-sub-projects/1-basic/sub/: CmakeLists.txt
cmake/3-code-generation/configure-files/: main.cc  ver.h.in
cmake/3-code-generation/protobuf/: CmakeLists.txt
conan/: conan.cc  conanfile.txt
gtest/01-TEST/: CMakeLists.txt  hello_test.cc
gtest/02-TEST_F/: CMakeLists.txt  queue.h  queue_test.cc
gtest/03-TEST_P/: CMakeLists.txt  prime_tables.h  readme.md  value_params_test.cc
performance/: CMakeLists.txt  readme.md
performance/some/: some.cc
performance/string/: string.cc  string.h
performance/util/: CMakeLists.txt  allocation.cc  gettimeofday.h  stopwatch.cc  stopwatch.h  stopwatch03.cc  stopwatch03.h  testdriver.cc  testdriver.h  util.h
src/: main  main.cc  operators  operators.cc  primes  primes.c
src/algo/: bound.cc  fnmatch.cc
src/array/: heap.cc  stack.cc
src/assert/: assert.cc  assert1.cc  ignore_assert.cc
src/atomic/: exchange.cc
src/base/: char.c  char2.c
src/bit-fields/: main.cc
src/cast/: cast1.cc  cast_operator.cc  const_cast.cc  cv.cc  dynamic_cast.cc  dynamic_cast2.cc  explicit.cc  reinterpret_cast.cc
src/class/: mutable.cc
src/class/constructors/: box.cc  constructors.md  copy3.cc  move.cc  move3.cc  order_of_construction.cc
src/class/declare/: class.cc  init.cc  init2.cc  initializing.cc
src/class/destructors/: destructors.cc  order_of_destruction.cc
src/class/inheritance/: virtual.cc  virtual2.cc
src/class/poly/: poly.c
src/class/poly/animal/: cat.c  main.c
src/class/poly/shape/: shape  shape.cc
src/class/rall/: rall.cc  rall.md
src/class/type_conversions/: explicit_types.cc  typs1.cc
src/class/virtual/: CMakeLists.txt  base.cc  base.h  virtual.cc
src/class/virtual/child/: CMakeLists.txt  data_a.cc  data_a.h
src/const/: num.cc
src/cv/: cv1.cc
src/dec_and_def/: constexpr.cc  decltype.cc  nullptr.cc
src/double/: dist.cc  div.cc  double.cc  strtod.cc
src/endian/: main.c  readme.md
src/enum/: enum.cc
src/for/: range.cc
src/func/: snprintf.cc
src/func/returning_multiple_values/: returning_multiple_values_case1  returning_multiple_values_case1.cc  returning_multiple_values_case2.cc
src/gxx/: readme.md
src/lock/: lock_guard2.cc  lock_guard3.cc  spin_lock.h  unique_lock1.cc
src/lock_guard/: main.cpp
src/macro/: define.cc
src/macros/: like.cc
src/main/: main.cc
src/memory/: memset.cc  size.cc
src/mutex/: unordered_map.cc
src/pointers/: case1.cc  new_and_del.cc  nullptr.cc  readme.md  weak_ptr.cc
src/preprocessors/: a.cc
src/reference/: forward.cc  l_r_values.cc  move.cc  move2.cc  pass1.cc  pass2.cc  reference_case1.cc  reference_case2.cc  references_to_pointers.cc  shape1.cc  values.cc
src/sizeof/: case1.cc  case2.cc
src/socket/: ex2.cc  example.cc
src/standard_library/mutex/: mutex1.cc
src/standard_library/thread/: c1.cc
src/string/: auto.cc  c_str.cc  return.cc  split.cc  string_view.h
src/struct/declare/: struct.cc
src/trans/: double.cc
src/unions/: union.cc
src/unordered.map/: case1.cc
src/values/: old_move_case.cc  pass2.cc  values.cc
src/variable/: case1.cc
src/vector/: case1.cc
